Fixes: #17 personpicker switches don't align with avatars

--- a/src/widgets/personpicker/less/personpicker.less
+++ b/src/widgets/personpicker/less/personpicker.less
@@ -8,7 +8,7 @@
             width: 100%;
             display: inline-block;
 
-            .switch {
+            .ui-toggleswitch {
                 float: left;
             }
             h3 {
